# comfyUI_DaVinciResolve

./: README.md  pyproject.toml
custom_nodes/: README.md  node_text_to_speech.py  nodes_phi_3_contitioning.py  nodes_phy_3_contitioning.py  save_audio_to_davinci.py  save_image_to_davinci.py
