[project]
name = "comfyui_davinciresolve"
description = "Nodes:TextToSpeech, phy_3_conditioning, SaveAudioToDaVinci, SaveImageToDaVinci.\nNOTE:In order to use DaVinci node you must have DaVinci Resolve Studio connected to the API. For more information check the help seciton in DaVinci Resolve Studio HELP>DOCUMENTATION>DEVELOPER. It will open a folder, search for scripting and the for README.txt file, the API documentation."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/barckley75/comfyUI_DaVinciResolve"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyUI_DaVinciResolve"
Icon = ""
